--- a/index.html
+++ b/index.html
@@ -6,16 +6,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/todo.css">
 </head>
 
 <body>
     <div class="todo">
         <form>
-
+            <label for="new_text">Message</label>
+            <input id="new_text" type="text">
+            <label for="new_border_color">Border color</label>
+            <input id="new_border_color" type="color">
+            <button type="submit">Save</button>
+            <button type="reset">Reset</button>
         </form>
+
+        <form class="hide">
+            <label for="updated_text">Message</label>
+            <input id="updated_text" type="text">
+            <label for="updated_border_color">Border color</label>
+            <input id="updated_border_color" type="color">
+            <button type="submit">Update</button>
+            <button type="button">Cancel</button>
+        </form>
+
+        <div class="list">
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+            <div class="task">
+                <div class="text">Pazadinti barsuka</div>
+                <div class="actions">
+                    <div class="btn edit">Edit</div>
+                    <div class="btn delete">Delete</div>
+                </div>
+            </div>
+        </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 
 </html>
