--- a/index.html
+++ b/index.html
@@ -11,91 +11,8 @@
 </head>
 
 <body>
-    <div class="todo">
-        <form>
-            <label for="new_text">Message</label>
-            <input id="new_text" type="text">
-            <label for="new_border_color">Border color</label>
-            <input id="new_border_color" type="color">
-            <button type="submit">Save</button>
-            <button type="reset">Reset</button>
-        </form>
+    <div id="barsukas_todos" class="todo"></div>
 
-        <form class="hide">
-            <label for="updated_text">Message</label>
-            <input id="updated_text" type="text">
-            <label for="updated_border_color">Border color</label>
-            <input id="updated_border_color" type="color">
-            <button type="submit">Update</button>
-            <button type="button">Cancel</button>
-        </form>
-
-        <div class="list">
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-            <div class="task">
-                <div class="text">Pazadinti barsuka</div>
-                <div class="actions">
-                    <div class="btn edit">Edit</div>
-                    <div class="btn delete">Delete</div>
-                </div>
-            </div>
-        </div>
-    </div>
     <script src="./js/main.js" type="module" defer></script>
 </body>
 
